--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -5,87 +5,30 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Type Rush</title>
+    <title>Type Rush - 
+        {% block title_block %}
+            Base 
+        {% endblock %}
+    </title>
     <link href="{% static 'stylesheets/base.css' %}" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <div class="container">
-        <header>
-            <div class="header-content">
-                <div class="header-title">
-                    <img class="main-logo" src="images/logo.png" alt="logo" width="100px" height="100px">
+        {% block header_block %}
+            {% include "typerush/header.html" %}
+        {% endblock %}
 
-                    <h1>Type Rush</h1>
-                </div>
+        {% block main_block %}
+        {% endblock %}
 
-                <nav>
-                    <ul class="header-nav-list">
-                        <li><a href="">
-                                <h3>Home</h3>
-                            </a>
-                        </li>
-                        <li><a href="">
-                                <h3>Leaderboard</h3>
-                            </a>
-                        </li>
-                        <li><a href="">
-                                <h3>Log In</h3>
-                            </a>
-                        </li>
-                        <li><a href="">
-                                <h3>Sign Up</h3>
-                            </a>
-                        </li>
-                    </ul>
-
-                </nav>
-            </div>
-
-        </header>
-
-        <main>
-
-
-
-
-
-        </main>
-
-
-        <footer>
-            <div class="footer-content">
-
-                <div class="footer-nav">
-                    <ul class="footer-nav-list">
-
-                        <li><a href="">
-                                | Home
-                            </a>
-                        </li>
-                        <li><a href="">
-                                Leaderboard
-                            </a>
-                        </li>
-                        <li><a href="">
-                                Log In
-                            </a>
-                        </li>
-                        <li><a href="">
-                                Sign Up
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-title">
-                    | Type Racer
-                </div>
-                <div class="copyright">
-                    | © 2024, WAD 2B.
-                </div>
-            </div>
-
-        </footer>
+        {% block sidebar_block %}
+        {% endblock %}
+        
+        {% block footer_block %}
+            {% include "typerush/footer.html" %}
+        {% endblock %}
+        
     </div>
 </body>
 
