home.css/html added.
Refer to home.css on how to inherit from base.css

--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -39,9 +39,7 @@ nav {
 }
 
 /* Main content of page changes from one page to another*/
-main {
-    flex: 1 0 auto;
-}
+main {}
 
 /* Footer flexbox within container */
 footer {
