--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -21,9 +21,10 @@
             {% include "typerush/header.html" %}
         {% endblock %}
 
-        {% block main_block %}
-        {% endblock %}
-
+        <main>
+            {% block main_block %}
+            {% endblock %}
+        </main>
         {% block sidebar_block %}
         {% endblock %}
         
