--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -1,18 +1,44 @@
 @import url('/static/stylesheets/base.css');
-img {
-    height: auto;
-    width: min-content;
-    padding: 10rem;
+main img {
+    height: 50%;
+    width: 80%;
 }
 
 main {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 10px;
-    
+    flex-direction: column;
 }
 
-.get-started-button{
-    width: fit-content;
+main h1 {
+    font-size: 5em;
+    padding: 10px;
+
+}
+
+main .instructions{
+    margin: 10px;
+
+}
+
+main .get-started-button{
+    border:none;
+    border-radius: 20px;
+    background-color: #FFF2D8;
+    color: #113946;
+    text-align: center;
+    padding: 16px;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+    margin: 20px;
+    font-style: italic;
+}
+
+/* W3schools tutorial code for box-shadow*/
+main .get-started-button:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: white;
 }
