--- a/templates/typerush/footer.html
+++ b/templates/typerush/footer.html
@@ -3,9 +3,9 @@
 
         <div class="footer-nav">
             <ul class="footer-nav-list">
-
+                |
                 <li><a href="">
-                        | Home
+                         Home
                     </a>
                 </li>
                 <li><a href="">
