--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -82,8 +82,8 @@ nav a,
     text-decoration: none;
 }
 
-a:hover{
+nav a:hover, .footer-nav a:hover{
     color: white;
-    text-decoration: underline;
+    font-style: italic;
 }
 
