--- a/static/stylesheets/leaderboard.css
+++ b/static/stylesheets/leaderboard.css
@@ -1,18 +1,22 @@
 @import url('/static/stylesheets/base.css');
 
+body{
+    margin: 0 20% 0 20%;
+}
 main {
+    padding: 5% 0 5% 0;
+    
     display: inline flex;
     min-height: 50vh;
-    justify-content: center;
-    padding: 20px;
-    gap: 20px;
+    gap: 20px 20px;
     border-radius: 10px;
+    flex-wrap: wrap;
 }
 
 .left-panel{
     display: flex;
     flex-direction: column;
-    margin: 5px;
+
     width: 30%;
     gap: 20px;
     min-height: 50vh;
@@ -23,7 +27,7 @@ main {
 
 .rank-box {
     display: flex;
-    background-image: linear-gradient(#FFFFFF,#ffffff74);
+    background-image: linear-gradient(var(--dark), var(--white));
     color: black;
     padding: 0 15px 0 15px;
     min-height: 10vh;
@@ -39,9 +43,10 @@ main {
 
     gap: 20px;
 
-    background-image: linear-gradient(#0B2323, #193232);
+    background-color: var(--darker);
+    
     min-height: 40vh;
-    border: 2px solid #908a7d;
+    border: 1px solid var(--dark);
     border-radius: inherit;
 
     text-align: center;
@@ -50,18 +55,26 @@ main {
 
 .profile-pic img{
     height: 15vh;
-    width: 15vh;
+    width: 17vh;
     border-radius: 50%;
-
+}
+.data-items img {
+    border-radius: 50%;
+    height: 5vh;
+    width: 5vh;
 }
 
 .right-panel{
-    background-image: linear-gradient(#0B2323, #193232);
+    display: flex;
+    flex-direction: column;
+    background-color: var(--darker);
 
     min-height: 50vh;
     width: 50%;
-    border: 2px solid #908a7d;
+    border: 1px solid var(--dark);
     border-radius: inherit;
+
+    padding: 3% 4% 4% 4%;
 }
 
 .rank-display{
@@ -81,7 +94,69 @@ main {
 
 .profile-title #real-name {
     text-transform: capitalize;
-    color: aquamarine;
+    color: var(--mint);
 }
 
+.table-title{
+    font-size: x-large;
+    text-transform: uppercase;
+    
+}
 
+table {
+    padding-top: 3%;
+    width: 100%;
+    text-align: left;
+}
+
+th, td {
+    border-bottom: 1px solid #ddd;
+    padding: 4px;
+}
+
+.data-items #user-data #fullname{
+    color: var(--mint);
+}
+
+.data-items #user-data{
+    display: flex;
+
+}
+.data-items #user-data #name{
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+}
+
+.leaderboard-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+button{
+    transition: all 0.5s;
+    color: inherit;
+    border: 1px solid #ddd;
+    background-color:var(--darkest);
+    padding: 5%;
+}
+
+button:hover {
+    transition: all 0.5s;
+    
+    background-color: #ddd;
+    border:var(--darkest);
+    color:var(--darkest);
+}
+
+.select-mode{
+    display: flex;
+    justify-content: space-evenly;
+    margin: none;
+    
+}
+
+tr #rank {
+    padding-left: 10px;
+}
