--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -8,21 +8,24 @@
 
     <nav>
         <ul class="header-nav-list">
-            <li><a href="">
-                    <h3>Home</h3>
-                </a>
+            <li><button type="button">
+                Home
+            </button>
             </li>
-            <li><a href="">
-                    <h3>Leaderboard</h3>
-                </a>
+            <li>
+                <button type="button">
+                    Leaderboard
+                </button>
             </li>
-            <li><a href="">
-                    <h3>Log In</h3>
-                </a>
+            <li>
+                <button type="button">
+                    Log In
+                </button>
             </li>
-            <li><a href="">
-                    <h3>Sign Up</h3>
-                </a>
+            <li>
+                <button type="button">
+                    Sign Up
+                </button>
             </li>
         </ul>
 
