--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -7,7 +7,7 @@
     </div>
 
     <nav>
-        <ul class="header-nav-list">
+        <ul class="header-nav-buttons">
             <li><button type="button">
                 Home
             </button>
