--- a/templates/typerush/home.html
+++ b/templates/typerush/home.html
@@ -18,3 +18,7 @@
         
     <button class="button get-started-button">GET STARTED</button>
 {% endblock %}
+
+{% block javascript %}
+    <script src="{% static 'JQuery.js' %}"></script>
+{% endblock %}
