--- a/templates/typerush/footer.html
+++ b/templates/typerush/footer.html
@@ -4,11 +4,11 @@
     <div class="footer-nav">
         <ul class="footer-nav-list">
             |
-            <li><a href="">
+            <li><a href="{% url 'typerush:home' %}">
                         Home
                 </a>
             </li>
-            <li><a href="">
+            <li><a href="{% url 'typerush:leaderboard' %}">
                     Leaderboard
                 </a>
             </li>
