--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -8,15 +8,8 @@
 
     <nav>
         <ul class="header-nav-buttons">
-            <li><button type="button">
-                Home
-            </button>
-            </li>
-            <li>
-                <button type="button">
-                    Leaderboard
-                </button>
-            </li>
+            <li><a href="{% url 'typerush:home' %}"><button type="button">Home</button></a></li>
+            <li><a href="{% url 'typerush:leaderboard' %}"><button type="button">Leaderboard</button></a></li>
             <li>
                 <button type="button">
                     Log In
