--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -32,8 +32,8 @@
                 <img src="{% static 'images/profile1.jpg' %}" alt="profile pic goes here" />
             </div>
             <div class="profile-title">
-                <h2 id="username">Username goes here</h2>
-                <h3 id="real-name"> Fullname if given</h3>
+                <h2 id="username">{{ user_instance.username }}</h2>
+                <h3 id="real-name"> {{user_instance.firstname}} {{user_instance.surname }}</h3>
             </div>
 
         </div>
