Get started button with fading

--- a/templates/typerush/home.html
+++ b/templates/typerush/home.html
@@ -16,5 +16,8 @@
         Game Instruction not added yet. But it will look like this when added.
     </div>
         
-    <button class="button get-started-button">GET STARTED</button>
+    <button type = "button" class="button get-started-button">GET STARTED</button>
+    
+    <script src="{% static 'script/JQuery.js' %}"></script>
+
 {% endblock %}
