--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -38,6 +38,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     crossorigin="anonymous"></script>
+    <script src="{% static 'script/JQuery.js' %}"></script>
 </body>
 
 </html>
