--- a/templates/typerush/home.html
+++ b/templates/typerush/home.html
@@ -18,6 +18,10 @@
         
     <button type = "button" class="button get-started-button">GET STARTED</button>
     
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'script/JQuery.js' %}"></script>
+
+    
+
 
 {% endblock %}
