--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -115,6 +115,7 @@ nav li,
         font-size: 1.5rem;
         border: 1px solid var(--mint);
         transition: all 0.5s;
+        border-radius: 10px;
         background-color: var(--darker);
         color: var(--white);
         padding: 1rem;
