--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -9,7 +9,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    padding: 5% 10% 5% 10%;
     flex-direction: column;
 }
 
