--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -1,7 +1,8 @@
+{% load static %} 
 
 <div class="header-content">
     <div class="header-title">
-        <img class="main-logo" src="images/logo.png" alt="logo" width="100px" height="100px">
+        <img class="main-logo" src="{% static 'images/logo.png' %}" alt="logo" width="110px" height="50px">
 
         <h1>Type Rush</h1>
     </div>
