--- a/templates/typerush/login.html
+++ b/templates/typerush/login.html
@@ -11,7 +11,7 @@
 
 {% block main_block %}
 <div class="login-box">
-    <h2>Login Form</h2>
+    <h2>Login</h2>
     <form action="">
         <div class="user-box">
             <input type="text" required>
